Production hardening: service layer, ops, perf, JUnit 5, UI tests
Web robustness & operability:
- DetectionService with a bounded LRU result cache and privacy-safe
  logging (length + outcome only — never the user's text).
- @RestControllerAdvice maps malformed JSON to 400 and unchecked errors
  to a generic 500, all in the existing JSON shape.
- PayloadLimitFilter rejects oversized bodies with 413 before parsing.
- CORS is config-driven (langdetect.allowed-origins), default same-origin;
  dropped the blanket @CrossOrigin.
- ApplicationRunner warms the detector at startup (fast first request on
  Cloud Run); actuator health endpoint with liveness/readiness groups.
- All limits/behavior externalized via @ConfigurationProperties
  (DetectionProperties); GET /api/config reads them so the UI stays in sync.

Core performance:
- detectLanguageWithLinearWeights tokenizes the input once and reuses the
  token list across all n-gram sizes instead of re-tokenizing per size.

Tests & tooling:
- Migrated the core test module from JUnit 3/4 (TestCase) to JUnit 5.
- New web tests for the cache, exception advice, and payload filter.
- Front-end unit tests with Vitest + jsdom (app.js refactored into
  exported pure helpers + an init() wiring function); added a Node CI job.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>